# ail

./: .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DECOMPOSITION-PROMPT.md  LEARNINGS.md  LICENSE  README.md  RUNNER-SPEC.md  SPEC-interim.md  SPEC.md  full-test-and-coverage.txt
ail/: Cargo.toml
ail-core/: CLAUDE.md  Cargo.toml  build.rs
ail-core/src/: delete.rs  error.rs  executor.rs  formatter.rs  fs_util.rs  ipc.rs  lib.rs  logs.rs  materialize.rs  protocol.rs  skill.rs  template.rs  test_helpers.rs
ail-core/src/config/: discovery.rs  domain.rs  dto.rs  inheritance.rs  mod.rs  project_state.rs  validation.rs
ail-core/src/config/validation/: mod.rs  on_result.rs  regex_literal.rs  sampling.rs  step_body.rs  system_prompt.rs
ail-core/src/executor/: controlled.rs  core.rs  events.rs  headless.rs  helpers.rs  mod.rs  parallel.rs
ail-core/src/executor/dispatch/: context.rs  mod.rs  prompt.rs  skill.rs  sub_pipeline.rs
ail-core/src/executor/helpers/: condition.rs  invocation.rs  mod.rs  on_result.rs  runner_resolution.rs  shell.rs  system_prompt.rs
ail-core/src/runner/: claude.rs  dry_run.rs  factory.rs  http.rs  mod.rs  stub.rs  subprocess.rs
ail-core/src/session/: log_provider.rs  mod.rs  sqlite_provider.rs  state.rs  turn_log.rs
ail-core/tests/: spec_coverage.rs
ail-core/tests/fixtures/: before_then_chains.ail.yaml  condition_contains.ail.yaml  condition_expression.ail.yaml  condition_steps.ail.yaml  context_shell.ail.yaml  defaults_tools.ail.yaml  from_base.ail.yaml  from_child.ail.yaml  from_circular_a.ail.yaml  from_circular_b.ail.yaml  from_disable.ail.yaml  from_hook_without_from.ail.yaml  from_invalid_hook_target.ail.yaml  from_plain_child.ail.yaml  invalid_context_no_source.ail.yaml  invalid_duplicate_ids.ail.yaml  invalid_empty_pipeline.ail.yaml  invalid_invocation_not_first.ail.yaml  invalid_no_primary_field.ail.yaml  invalid_no_version.ail.yaml  invalid_sampling_stop_sequences.ail.yaml  invalid_sampling_temperature.ail.yaml  modify_output.ail.yaml  named_pipeline_circular.ail.yaml  named_pipeline_with_prompt.ail.yaml  named_pipelines.ail.yaml  nested_chains.ail.yaml  on_result_multi_branch.ail.yaml  parallel_basic.ail.yaml  parallel_invalid_forward_ref.ail.yaml  parallel_invalid_join_no_deps.ail.yaml  parallel_invalid_orphan.ail.yaml  parallel_structured.ail.yaml  provider_costs.ail.yaml  provider_defaults.ail.yaml  recursive_self.ail.yaml  sampling_basic.ail.yaml  sampling_provider_attached.ail.yaml  sampling_thinking_bool.ail.yaml  skill_step.ail.yaml  (+2 more)
ail-core/tests/spec/: executor.rs  mod.rs  r05_http_runner.rs  r10_plugin_protocol.rs  r11_plugin_discovery.rs  s03_file_format.rs  s04_execution_model.rs  s04_log_provider.rs  s05_3_on_result.rs  s05_5_context_steps.rs  s05_7_then_chains.rs  s05_append_system_prompt.rs  s05_step_specification.rs  s06_pipeline_inheritance.rs  s06_skills.rs  s07_pipeline_inheritance.rs  s08_http_runner.rs  s08_multi_runner.rs  s08_runner_adapter.rs  s08_subprocess.rs  s09_permission_listener.rs  s09_sub_pipeline.rs  s09_tool_permissions.rs  s10_model_config.rs  s10_named_pipelines.rs  s11_template_variables.rs  s12_step_conditions.rs  s13_sqlite_provider.rs  s15_skills.rs  s16_on_error.rs  s17_error_handling.rs  s18_materialize_chain.rs  s19_runner_factory.rs  s21_dry_run.rs  s21_mvp.rs  s21_reload_self.rs  s23_structured_output.rs  s24_log_formatter.rs  s26_output_schema.rs  s26_s27_s28_integration.rs  (+15 more)
ail-init/: Cargo.toml
ail-init/src/: fetcher.rs  install.rs  lib.rs  manifest.rs  picker.rs  template.rs  url_ref.rs
ail-init/src/source/: bundled.rs  mod.rs  url.rs
ail-init/tests/: bundled_templates_validate.rs  run.rs
ail/src/: ask_user_hook.rs  chat.rs  check_permission_hook.rs  cli.rs  command.rs  control_bridge.rs  delete.rs  discover.rs  dry_run.rs  help.rs  log.rs  logs.rs  main.rs  materialize.rs  mcp_bridge.rs  once_json.rs  once_text.rs  spec.rs  stdio.rs  validate.rs
ail/src/agent_guide/: claudemd-full.md  claudemd.md  mod.rs
ail/src/ask_user_types/: canonical.rs  claude_preview.rs  flat.rs  mod.rs  stringified.rs
ail/src/tui/: app.rs  backend.rs  fullscreen.rs  input.rs  mod.rs  theme.rs
ail/tests/: cli_agent_guide.rs  cli_chat.rs  cli_delete.rs  cli_log_follow.rs  cli_logs_tail.rs  cli_materialize.rs  cli_once_stub.rs  cli_stdio.rs  cli_validate.rs
ail/tests/common/: mod.rs
ail/tests/fixtures/: minimal.ail.yaml  solo_developer.ail.yaml
(+452 files in other folders)
