[package]
name = "ail-core"
version = "0.0.1"
edition = "2021"
license = "MPL-2.0"

[dependencies]
thiserror = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
jsonschema = "0.28"
sha1 = { version = "0.10", features = ["std"] }
interprocess = "2.2"
rusqlite = { version = "0.31", features = ["bundled"] }
tempfile = "3"
ureq = { version = "2", features = ["json"] }
event-listener = "5"
regex = "1"

[dev-dependencies]
stub-llm = { path = "../stub-llm" }
