[package]
name = "ail-init"
version.workspace = true
edition.workspace = true
license = "MPL-2.0"

[dependencies]
ail-core = { path = "../ail-core" }
dialoguer = { version = "0.11", default-features = false }
include_dir = "0.7"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
ureq = "2"

[dev-dependencies]
tempfile = "3"
mockito = "1"
