[package]
name = "ail"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-only"

[[bin]]
name = "ail"
path = "src/main.rs"

[dependencies]
ail-core = { path = "../ail-core" }
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
interprocess = "2.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "sync"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"
